--- a/server.po
+++ b/server.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-10-23 03:37+0000\n"
-"PO-Revision-Date: 2014-10-22 23:32+0000\n"
+"PO-Revision-Date: 2015-03-04 13:17+0000\n"
 "Last-Translator: Raul <raul.malea@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ro\n"
@@ -13,20 +13,19 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
 "20)) ? 1 : 2);;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1414020758.0\n"
+"X-POOTLE-MTIME: 1425475034.0\n"
 
 #: app/index.html:9
 msgid "Find My Device — Firefox OS — Mozilla"
-msgstr ""
+msgstr "Găsește dispozitivul meu — Firefox OS — Mozilla"
 
 #: app/index.html:42
-#, fuzzy
 msgid "mozilla"
-msgstr "Mozilla"
+msgstr "mozilla"
 
 #: app/index.html:43
 msgid "Firefox OS"
-msgstr ""
+msgstr "Firefox OS"
 
 #: app/index.html:44
 msgid "Find My Device"
@@ -111,11 +110,11 @@ msgstr ""
 
 #: app/index.html:84
 msgid "Contact Us"
-msgstr ""
+msgstr "Contactează-ne"
 
 #: app/index.html:85
 msgid "Partner with Us"
-msgstr ""
+msgstr "Partener cu noi"
 
 #: app/index.html:86
 msgid "Donate"
@@ -123,11 +122,11 @@ msgstr "Donează"
 
 #: app/index.html:87
 msgid "Firefox Affiliates"
-msgstr ""
+msgstr "Afiliați Firefox"
 
 #: app/index.html:88
 msgid "Contribute to this page"
-msgstr ""
+msgstr "Contribuie la această pagină"
 
 #: app/index.html:91
 msgid "Privacy"
@@ -147,11 +146,11 @@ msgstr "Mozilla:"
 
 #: app/index.html:101 app/index.html:108
 msgid "Twitter"
-msgstr ""
+msgstr "Twitter"
 
 #: app/index.html:102 app/index.html:109
 msgid "Facebook"
-msgstr ""
+msgstr "Facebook"
 
 #: app/index.html:106
 msgid "Firefox:"
@@ -159,7 +158,7 @@ msgstr "Firefox:"
 
 #: app/index.html:110
 msgid "YouTube"
-msgstr ""
+msgstr "YouTube"
 
 #~ msgid ""
 #~ "<a href=\"https://twitter.com/firefox\">Twitter<span> (@firefox)</span></"
