--- a/client.po
+++ b/client.po
@@ -182,7 +182,7 @@ msgstr "Parolele trebuie să fie identice."
 #: app/scripts/templates/lost_mode_passcode.html:12
 msgid ""
 "Once your device is locked, you will not be able to change this code again."
-msgstr "După ce ați încuiat dispozitivul nu veți mai putea schimba acest cod."
+msgstr "După ce ați blocat dispozitivul nu veți mai putea schimba acest cod."
 
 #: app/scripts/templates/play_sound.html:2
 #: app/scripts/templates/play_sound.html:4
